# rust-examples

./: .gitignore  README.md
abstract-factory-pattern/: Cargo.toml
abstract-factory-pattern/src/: README.md
borrowing/: Cargo.toml
borrowing-various-aspects/: Cargo.toml  README.md
borrowing-various-aspects/src/: main.rs
borrowing/src/: main.rs
borrwing/: README.md
borrwing/src/: main.rs
borrwing_ownership_moves/: Cargo.toml
borrwing_ownership_moves/src/: main.rs
call_libc_functions/: Cargo.toml
call_libc_functions/src/: main.rs
closures_anonymus_functions/: Cargo.toml
closures_anonymus_functions/src/: main.rs
command-pattern/src/: command.rs  invoker.rs  main.rs  speed_calculator.rs  speed_calculator_impl.rs
console-menu/: Cargo.toml
console-menu/src/: main.rs
csv-procwssing/src/: main.rs
data-processing/csv-processing/: Cargo.toml  README.md
data-structures/hash-map-memory-allcoation/: README.md
data-structures/heap/: README.md
design-patterns/abstract-factory-pattern/: README.md
design-patterns/builder-pattern/: Cargo.toml  README.md
design-patterns/command-pattern/: Cargo.toml  README.md
factory-pattern/: Cargo.toml  README.md
factory-pattern/src/: main.rs
fibonacci/: README.md
functional_programming/: README.md
math-examples/: Cargo.toml
no_std_call_libc_functions/: Cargo.toml  README.md
no_std_call_libc_functions/src/: main.rs
raw_pointers/: README.md
standard_c_math_example/: Cargo.toml  README.md
test-minifb/: Cargo.toml  README.md
threads/: Cargo.toml  README.md
tic-tac-toe/: Cargo.toml  README.md
(+40 files in other folders)
