[package]
name = "call_libc_functions"
authors = ["janosvajda <vajdajanos@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
opt-level = 3 
lto = true
codegen-units = 1
panic = "abort"
strip = true
