[package]
name = "no_std_call_libc_functions"
authors = ["janosvajda <vajdajanos@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2", default-features = false }

# More docs of profile options
# https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
opt-level = 3 
lto = true # LTO can produce better optimized code, using whole-program analysis, at the cost of longer linking time
codegen-units = 1
panic = "abort"
strip = "debuginfo, symbols"
